# Rust_prectice

./: README.md
11_12_2025/ownership_borrowing/src/: main.rs
12_12_2025/option_result/src/: main.rs
13_12_2025/ownership_borrowing/src/: main.rs
19_12_2025/mastered_the_entrypoint/: Cargo.toml
19_12_2025/mastered_the_entrypoint/src/: main.rs
1_10_2026/: readme.md
1_10_2026/anchor_boileplate/: rust-toolchain.toml
1_10_2026/anchor_boileplate/tests/: anchor_boileplate.ts
1_10_2026_🗒️/anchor_boileplate/: Anchor.toml
1_12_2026_🦀/anchor_boilerplate/: Anchor.toml  Cargo.toml
1_12_2026_🦀/anchor_boilerplate/tests/: anchor_boilerplate.ts
1_4_2026/anchor_boileplate/: Anchor.toml
1_4_2026/anchor_boileplate/tests/: anchor_boileplate.ts
1_9_2026/anchor_boileplate/: Anchor.toml  Cargo.toml  rust-toolchain.toml
1_9_2026/anchor_boileplate/programs/anchor_boileplate/: Cargo.toml
1_9_2026/anchor_boileplate/programs/anchor_boileplate/src/: error.rs  lib.rs  state.rs
1_9_2026/anchor_boileplate/programs/anchor_boileplate/src/instructions/: borrow.rs
1_9_2026/anchor_boileplate/tests/: anchor_boileplate.ts
21_12_2025/mastered_the_entrypoint/src/: lib.rs
25_12_2025/: readme.md
25_12_2025/mastered_the_entrypoint/src/: lib.rs
26_12_2025/: readme.md
26_12_2025/mastered_the_entrypoint/src/: lib.rs
27_12_2025/: readme.md
28_12_2025/: readme.md
28_12_2025/anchor_boilertplate/: Anchor.toml
28_12_2025/anchor_boilertplate/tests/: Cargo.toml  anchor_boilertplate.ts
29_12_2025_🦀/anchor_boileplate/: Anchor.toml
9_12_2025/option_result/: readme.md
(+43 files in other folders)
